# kafka-poc

./: .gitignore  README.md  docker-compose.yml
consumer/: Dockerfile  pyproject.toml
consumer/consumer/: __main__.py  cleaning.py  consumers.py  leveldb.py
data/: debezium-pg-config.json  initialize-postgres.sql  more-addresses.csv  more-names.csv
myapp/: Dockerfile  README.md  pyproject.toml
myapp-etl/: Dockerfile  README.md  pyproject.toml
myapp-etl/myapp_etl/: cleaning.py  consumers.py  main.py
myapp/myapp/: api.py  fst.py  kafka.py  leveldb.py  main.py
publisher/: Dockerfile  pyproject.toml
publisher/publisher/: dependencies.py  fst.py  leveldb.py  main.py
publisher/publisher/models/: __init__.py  models.py
publisher/publisher/views/: v1.py
