[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Jeremy Schendel <jschendel@nexthealthtechnologies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
plyvel-ci = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
unfixable = []
